# mexchange

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
accounts/: .env.example  Cargo.toml  Dockerfile
accounts/migrations/: 001_create_users.sql  002_create_ledger.sql  003_add_constraints.sql  004_create_orders_trades.sql  005_nullable_trade_ids.sql  006_exchange_fill_id_index.sql  007_remove_exchange_order_id.sql  seed.sql
accounts/src/: lib.rs  main.rs  scheduler.rs
accounts/src/db/: mod.rs
accounts/src/mail/: mod.rs  smtp.rs
accounts/src/models/: balance.rs  ledger.rs  mod.rs  ohlcv.rs  order.rs  otp.rs  token.rs  trade.rs  user.rs
accounts/src/routes/: auth.rs  balances.rs  faucet.rs  internal.rs  mod.rs  ohlcv.rs  orders.rs
accounts/tests/: ledger_tests.rs  settlement_tests.rs
e2e-tests/: package-lock.json  package.json
e2e-tests/src/: accounts-client.ts  db-client.ts  debug.ts  run-full-flow.ts  run-settlement-only.ts  run-tests.ts  service-monitor.ts  test-client.ts  test-framework.ts
e2e-tests/src/tests/: connectivity-tests.ts  full-flow-tests.ts  matching-tests.ts  order-flow-tests.ts  orderbook-tests.ts  settlement-tests.ts
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  ws_test.cjs
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: accounts.ts
frontend/src/components/: DepthChart.tsx  Dropdown.tsx  EmbedTopBar.tsx  ErrorBoundary.tsx  HeaderBar.tsx  InlineOrderHistory.tsx  MarketSelector.tsx  MarketStats.tsx  Modal.tsx  OpenOrders.tsx  OrderBook.tsx  OrderHistory.tsx  PriceChart.tsx  RecentTrades.tsx  ToastContainer.tsx  TradeForm.tsx  TradeHistory.tsx  VirtualizedList.tsx
frontend/src/components/core/: Form.tsx
frontend/src/hooks/: useOrderBook.ts  useOrderBookWorker.ts  useWebSocket.ts
frontend/src/pages/: Account.tsx  History.tsx  OrderDetail.tsx  Portfolio.tsx  SignIn.tsx  SignUp.tsx
frontend/src/stores/: authStore.ts  toastStore.ts
frontend/src/utils/: hftOptimizations.ts
frontend/src/workers/: marketDataWorker.ts  timerWorker.ts
gateway/: Cargo.toml  Dockerfile  README.md  WEBSOCKET_PROTOCOL.md
gateway/src/: channel_updates.rs  events.rs  lib.rs  main.rs  proxy.rs  server.rs  state.rs  udp_transport.rs  websocket.rs
market_data/: Cargo.toml  Dockerfile
market_data/src/: events.rs  main.rs  ohlcv.rs
matching_engine/: Cargo.toml  README.md
matching_engine/benches/: matching_engine_bench.rs
matching_engine/examples/: building_orderbook.rs  crossing_spread.rs  market_orders.rs  order_cancellation.rs  partial_fills.rs
matching_engine/src/: lib.rs
matching_engine_service/: Cargo.toml  Dockerfile  README.md  test_kafka.sh
matching_engine_service/src/: events.rs  main.rs  settlement.rs  udp_transport.rs
trading_bot/: Cargo.toml
trading_bot/src/: gateway_client.rs  indicators.rs  lib.rs  main.rs  types.rs
trading_bot/src/strategies/: aggressive.rs  market_maker.rs  mean_reversion.rs  mod.rs  random.rs
udp_proto/: Cargo.toml
udp_proto/benches/: protocol_bench.rs
udp_proto/src/: binary.rs  error.rs  lib.rs  market_data.fbs  protocol.rs  receiver.rs  sender.rs  tests.rs
