[package]
name = "accounts"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Karsopawiro <kevin@kevin.rs>"]
license = "MIT"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

# Auth
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Decimal
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Pin problematic transitive deps
home = "=0.5.9"
base64ct = "=1.7.3"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3"
rust_decimal_macros = "1"

[lib]
name = "accounts"
path = "src/lib.rs"

[[bin]]
name = "accounts"
path = "src/main.rs"
