[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Karsopawiro <kevin@kevin.rs>"]
license = "MIT"
homepage = "https://kevin.rs"

[dependencies]
# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# UDP protocol for low-latency messaging
udp_proto = { path = "../udp_proto" }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Matching engine
matching_engine = { path = "../matching_engine" }
rust_decimal = "1.35"

# HTTP client for proxying
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "gateway"
path = "src/main.rs"
