[package]
name = "market_data"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Karsopawiro <kevin@kevin.rs>"]
license = "MIT"

[dependencies]
# Kafka consumer
rdkafka = { version = "0.36", features = ["cmake-build"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal"] }

# HTTP server (for health check)
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal
rust_decimal = { version = "1", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Pin problematic transitive deps
home = "=0.5.9"
base64ct = "=1.7.3"
