[package]
name = "matching_engine"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Karsopawiro <kevin@kevin.rs>"]
license = "MIT"
homepage = "https://kevin.rs"

[dependencies]
rust_decimal = "1.35"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matching_engine_bench"
harness = false
