[package]
name = "matching_engine_service"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Karsopawiro <kevin@kevin.rs>"]
license = "MIT"
homepage = "https://kevin.rs"

[dependencies]
# Matching engine library
matching_engine = { path = "../matching_engine" }
rust_decimal = "1.35"

# UDP protocol for low-latency messaging
udp_proto = { path = "../udp_proto" }
futures-util = "0.3"
parking_lot = "0.12"

# HTTP server for health checks
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client for settlement
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
