[package]
name = "udp_proto"
version = "0.1.0"
edition = "2021"
description = "Low-latency UDP messaging protocol for exchange services"

[dependencies]
thiserror = "1.0"
bytes = "1.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
flatbuffers = "24.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "protocol_bench"
harness = false
